Planner: Update to package.json file to remove browserlist and add a command to run the build folder.

--- a/package.json
+++ b/package.json
@@ -18,15 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "production": "pm2 start serve -s build > stdout.txt 2> stderr.txt &"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
